Update for Swing Bridge 1.3.0, and fix the build and run instructions
Bumps swing-bridge.version to 1.3.0, plus the defects that verifying the
starter against the released artifacts turned up.

Compile to Java 21. The Spring Boot parent derives maven.compiler.release
from java.version, which it sets to 17, so the pom's maven.compiler.source
had no effect and the project was producing bytecode 17 while claiming 21.

The README's launch commands hardcoded 1.0.0 while the pom had moved on, so
copying them failed outright. They now carry a <SWING_BRIDGE_VERSION>
placeholder alongside the mvn command that reads the value from the pom, so
the two cannot drift again. Those commands were also missing --add-opens for
java.desktop/java.awt.dnd and java.base/java.lang, which the pom's own
jvmArguments already had.

Also:

- Drop the swing-bridge-repo README section: no such directory exists and
  the pom declares no matching repository.
- Bind the debug agent to localhost rather than every interface.
- Drop the stray com.flowingcode entry from vaadin.allowed-packages.
- Add prerequisites and a configuration section, and list the 1.3
  swingbridge.* settings as commented-out entries so they are discoverable
  without turning any of them on.
- Add log4j2-spring.xml.example, inert as shipped, for telling concurrent
  users' log lines apart.
- Regenerate the frontend bundles against the new versions.

Verified against the released 1.3.0 artifacts: mvn clean package and
mvn spring-boot:run both build clean, the packaged jar starts from the
README's own command copied verbatim, and the hosted Swing app renders.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>